<resources>
    <string name="app_name">Android Group Project</string>

    <string name="searchBtn">Go</string>
    <string name="searchEditTxt">search</string>

    <string name="movieHint">Enter a movie title</string>
    <string name="movieSearch">Search</string>
    <string name="goToMovie">Go to Movies</string>
    <string name="movie_dialog">Madeleine Peluso, Version 1.0. Search for a movie title. You can add movies to your list of Favourites</string>
    <string name="movie_dialog_title">Movie Activity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="search_text_button">this is some text</string>
    <string name="aboutMovies">About</string>
    <string name="searchMovies">Search</string>
    <string name="movieData">Movie data</string>
    <string name="movie_stats_dialog">some dialogue</string>
    <string name="movie_stats_dialog_title">Movie Statistics</string>
    <string name="addMovieToFaves">Add to Favourites</string>


    <string name="cbcRefreshButton">Refresh</string>
    <string name="cbcSaveButton">Save Article</string>
    <string name="goToCBC">Go to CBC News Reader</string>
    <string name="cbcUnsaveButton">Remove Save</string>
    <string name="dialogTitle">Dialog Title</string>
    <string name="OK">OK</string>
    <string name="cbcCustomDialog1">Author: Tristan Duck, 040907808</string>
    <string name="cbcCustomDialog2">Version Number: 6</string>
    <string name="cbcCustomDialog3">Instructions:\n1. Click the refresh button to refresh the newest articles\n2. Click on a row to open the news article details\n3. The articles contain a link to the full articles and a short description\n4. You can also save and un-save the article for later use\n5. Stats are available in the menu-item </string>
    <string name="cbcSaved">Saved</string>
    <string name="mainScreenTitle">CST2335: Final Project</string>
    <string name="mainScreenGroup">By: Madeleine Peluso, Tristan Duck\nPatty Mosher, Justin Gamache</string>


    <string name="ocSend"> send message</string>
    <string name="deleteMovie">Delete from Favourites</string>
    <string name="movieFaves">Favourites</string>
    <string name="movieSnack">Added to Favourites</string>
    <string name="movieToast">No results found</string>
</resources>
