<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_search_category_default"
        app:showAsAction="always"
        android:title="@string/searchMovies"
        android:orderInCategory="100"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/faves"
        android:title="@string/movieFaves"
        app:showAsAction="always"
        android:orderInCategory="150" />

    <item android:id="@+id/movieAbout"
        android:title="@string/aboutMovies"
        app:showAsAction="always"
        android:orderInCategory="200" />

    <item
        android:id="@+id/movieStats"
        android:title="@string/movieData"
        app:showAsAction="collapseActionView"
        android:orderInCategory="250"  />



</menu>